# pyproject.toml

[tool.poetry]
name = "airontools"
version = "0.1.41"
description = "AIronTools (Beta) is a Python library that provides the user with deep learning tools built to work with tensorflow as a backend."
authors = ["Claudi Ruiz Camps <claudi_ruiz@hotmail.com>"]
readme = "README.md"
license = "BSD"
repository = "https://github.com/AtrejuArtax/airontools"
classifiers= [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10.12,<3.11"
tensorflow = "2.16.1"
keras = "3.1.1"
tensorflow-datasets = "=4.8.3"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
pip = "^23.1.2"
black = "^24.2.0"
twine = "^4.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"